--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
@@ -73,7 +73,7 @@
                             <tr>
                                 <td>{{d.id_usuario}}</td>
                                 <td>{{d.nombre}}</td>
-                                <td>{{d.tipo_Identificacion}}</td>
+                                <td>{{d.tipo_identificacion}}</td>
                                 <td>{{d.numero_identificacion}}</td>
                                 <td>{{d.telefono}}</td>
                                 <td>{{d.email}}</td>
@@ -106,12 +106,13 @@
                         <input type="text" id="nombre" name="nombre">
                     </div>
                     <div class="form-group">
-                        <label for="tipo_Identificacion">Tipo Identificacion:</label>
-                        <select id="tipo_Identificacion" name="tipo_Identificacion">
-                            <option value="cc">CC</option>
-                            <option value="ce">CE</option>
-                            <option value="nit">NIT</option>
-                            <option value="rc">RC</option>
+                        <label for="tipo_identificacion">Tipo Identificacion:</label>
+                        <select id="tipo_identificacion" name="tipo_identificacion">
+                            <option value="CC">CC</option>
+                            <option value="CE">CE</option>
+                            <option value="NIT">NIT</option>
+                            <option value="RC">RC</option>
+                            <option value="OTRO">OTRO</option>
                         </select>
                     </div>
                     <div class="form-group">
